# gasket

./: .gitignore  AUTHORS  CC0.txt  COPYING  Makefile.am  README.md  aclocal.m4  autogen.sh  configure.ac  gasket-0.1.pc.in
common/: Makefile.am
common/gasket/: client.h  gasket-train.h
demo/: Makefile  Makefile.am  rectangle_test.c
demo/.libs/: lt-gasket-square
demo/c/: Makefile.am  rectangle_test.c
demo/cpp/: Makefile  Makefile.am  gasket-square  rectangle_test.c
demo/cpp/.libs/: gasket-square
demo/python/: Makefile  display_csv.py  gasket_system_monitor.py  plot.py  rectangle_test.py  showdate.py  svg_histogram.py  system_monitor.py  test.py
gasket/: Makefile  Makefile.am  server.h
m4/: libtool.m4
src/: Makefile  Makefile.am  cairo.c  gasket-reset  gasket-test  gasket-train.c  gasket-train.h  server-private.h  server.c  test-main.c
src/client/: Makefile  Makefile.am  gasket-train.c
src/client/.libs/: libgasket-client-0.1.lai  libgasket-client-0.1.so.0  libgasket-client-0.1.so.0.0.0
src/server/: Makefile.am  cairo.c  server-private.h  server.c
src/tmp-introspect7FVibL/: Gasket-0.1.c
src/utils/: Makefile  Makefile.am  gasket-reset  main_reset.c
src/utils/.libs/: gasket-reset
test/: Makefile  gasket-square
test/.libs/: gasket-square
